--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.1",
     "dotenv": "^17.2.3"
+  },
+  "dependencies": {
+    "@cucumber/cucumber": "^11.3.0"
   }
 }
